--- a/index.html
+++ b/index.html
@@ -41,11 +41,27 @@
                 <br/>apasionado  por la <strong>educación, 
                 <br/>el progresó, la innovación y la tecnología</strong>.
             </h1>
-            <img src="img/hero.jpg" width="500px" height="300px" alt="Imagen principal del sitio">
+       <!--     <img src="img/hero.jpg" width="500px" height="300px" alt="Imagen principal del sitio"> -->
         </section>
 
         <section class="portfolio">
             <h2>Portafolio (Proyectos Destacados)</h2>
+            <article class="project">
+                <div class="project-details">
+                    <h3 class="project-title">Platzi Video</h3> 
+                    <h6 class="project-course">React Native / React</h6>
+                    <p class="project-date"><small><strong>Fecha: 01/07/2018</strong></small></p>
+                    <p class="project-url"><small><strong>Puedes verlo en::</strong> www.platzi.com/native</small></p>
+                    <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo 
+                    para crear la mejor app para enseñar el funcionamiento
+                    de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados</p>
+                </div>
+         
+                <figure>
+                    <img src="img/platzi-video-react-native.png" width="500px" alt="proyecto del curso de react native">
+                </figure>
+            </article>
+
             <article class="project">
                 <div class="project-details">
                     <h3 class="project-title">Platzi Video</h3> 
