calses 27 propiedades flexbox

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link rel="stylesheet" href="css/stilos.css">
 </head>
 <body>
+    <div class="flexbox">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
     <header class="header">
         <div >
             <figure class ="Logo">
