clase 29 Alineacion de forma horizontal y vertical

--- a/index.html
+++ b/index.html
@@ -12,16 +12,9 @@
 </head>
 <body>
     <div class="flexbox">
+        <div class="box" id="caja1"></div>
         <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box" id="caja3"></div>
     </div>
 
     <header class="header">
