--- a/index.html
+++ b/index.html
@@ -11,34 +11,32 @@
     <link rel="stylesheet" href="css/stilos.css">
 </head>
 <body>
-    <div class="flexbox">
+    <!-- <div class="flexbox">
         <div class="box" id="caja1"></div>
         <div class="box"></div>
         <div class="box" id="caja3"></div>
-    </div>
+    </div> -->
 
     <header class="header">
-        <div >
-            <figure class ="Logo">
-                <img src="img/logo.png" alt="Logo de http://JohnEsteban.com">
-            </figure>
+        <figure class ="Logo">
+            <img src="img/logo.png" height="50" alt="Logo de http://JohnEsteban.com">
+        </figure>
     
-            <nav class="menu">
-                <ol>
-                    <li>
-                        <a class="link" href="#portafolio">Portafolio</a>
-                    </li>
+        <nav class="menu">
+            <ol>
+                <li>
+                    <a class="link" href="#portafolio">Portafolio</a>
+                </li>
 
-                    <li>
-                        <a class="link" href="#experiencia">Experiencia</a>
-                    </li>
+                <li>
+                    <a class="link" href="#experiencia">Experiencia</a>
+                </li>
 
-                    <li>
-                        <a class="link" href="#contacto">Trabajemos juntos</a>
-                    </li>
-                </ol>
-            </nav>
-        </div>
+                <li>
+                    <a class="link" href="#contacto">Trabajemos juntos</a>
+                </li>
+            </ol>
+        </nav>
     </header> 
         <section class="hero">
             <h1>
@@ -57,7 +55,7 @@
                     <h3 class="project-title">Platzi Video</h3> 
                     <h6 class="project-course">React Native / React</h6>
                     <p class="project-date"><small><strong>Fecha: 01/07/2018</strong></small></p>
-                    <p class="project-url"><small><strong>Puedes verlo en::</strong> www.platzi.com/native</small></p>
+                    <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
                     <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo 
                     para crear la mejor app para enseñar el funcionamiento
                     de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados</p>
@@ -104,7 +102,16 @@
                 <button>Enviar</button>
             </from>
         </section>
+       
         <footer class="footer">
+            <div>
+                 <p>Curso de Desarrollo web online 2018 <img src="img/platzi.png" width="80" alt="platzi"></p>
+            </div>
+            <div>
+                <p>
+                    Designed with <\3 by <a href="https://thespianatist">@thespianartist </a>
+                </p>
+            </div>
         </footer>
 </body>
 </html>
