Corrección tamanio y negrita de la letra

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="event-detail">
                         <h3 class="event-title">PlatziConf México 2018</h3>
                         <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto como tener una vida de constante aprendizaje.</p>
-                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Plática</a>        
+                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Pláctica</a>        
                     </div>
                 </article>
                 <article class="event">
@@ -144,7 +144,7 @@
                     <div class="event-detail">
                         <h3 class="event-title">PlatziConf México 2018</h3>
                         <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto como tener una vida de constante aprendizaje.</p>
-                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Plática</a>        
+                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Pláctica</a>        
                     </div>
                 </article>
                 <article class="event">
@@ -154,7 +154,7 @@
                     <div class="event-detail">
                         <h3 class="event-title">PlatziConf México 2018</h3>
                         <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto como tener una vida de constante aprendizaje.</p>
-                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Plática</a>        
+                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Pláctica</a>        
                     </div>
                 </article>
                 <article class="event">
@@ -164,7 +164,7 @@
                     <div class="event-detail">
                         <h3 class="event-title">PlatziConf México 2018</h3>
                         <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto como tener una vida de constante aprendizaje.</p>
-                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Plática</a>        
+                        <a class="event-url" href="https://www.youtube.com/watch?v=-5KAN9_CzSA">Ver Pláctica</a>        
                     </div>
                 </article>
             </div>
